--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -32,16 +32,9 @@
             </div>
             <ul class="menuList">
                 <!-- Nav list - Company -->
-                <li class="menuListFirstLine menuListDrop">
-                    <a href="#" class="menuListItem expandList first">Firma<i class="fas fa-angle-down"></i></a>
-                    <ul class="menuListDrop-menu expand middle">
-                        <li><a href="#onas" class="menuListItem">O nas</a></li>
-                        <li><a href="#co_nas_wyroznia" class="menuListItem">Co nas wyróżnia</a></li>
-                        <li><a href="#historia_firmy" class="menuListItem">Historia firmy</a></li>
-                        <li><a href="#kadra" class="menuListItem">Kadra</a></li>
-                        <li><a href="#zarzad" class="menuListItem">Zarząd</a></li>
-                        <li><a href="#nagrody_certyfikaty" class="menuListItem">Nagrody i certyfikaty</a></li>
-                    </ul>
+                <li class="menuListFirstLine">
+                    <a href="index.html" class="menuListItem expandList first">Strona główna</a>
+                </li>
                 </li>
                 <!-- Nav list - Services -->
                 <li class="menuListFirstLine menuListDrop">
