--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
 
     <!-- Section 01 -->
-    <section class="whiteSection" id="#onas">
+    <section class="whiteSection" id="onas">
         <h1 class="h1left">O nas</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
@@ -125,7 +125,7 @@
     </section>
 
     <!-- Section 02 -->
-    <section class="colorSection" id="#co_nas_wyroznia">
+    <section class="colorSection" id="co_nas_wyroznia">
         <h1 class="h1right">Co nas wyróżnia</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
@@ -144,7 +144,7 @@
     </section>
 
     <!-- Section 03 -->
-    <section class="whiteSection" id="#historia_firmy">
+    <section class="whiteSection" id="historia_firmy">
         <h1 class="h1right">Historia firmy</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
@@ -163,7 +163,7 @@
     </section>
 
     <!-- Section 04 -->
-    <section class="colorSection" id="#kadra">
+    <section class="colorSection" id="kadra">
         <h1 class="h1left">Kadra</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
@@ -182,7 +182,7 @@
     </section>
 
     <!-- Section 05 -->
-    <section class="whiteSection" id="#zarzad">
+    <section class="whiteSection" id="zarzad">
         <h1 class="h1right">Zarząd</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
@@ -201,7 +201,7 @@
     </section>
 
     <!-- Section 06 -->
-    <section class="colorSection" id="#nagrody_certyfikaty">
+    <section class="colorSection" id="nagrody_certyfikaty">
         <h1 class="h1left">Nagrody i certyfikaty</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
