--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -102,9 +102,7 @@
     <footer class="colorSection footerSection">
         <div class="footerFlexSection">
             <div class="footerFlexSection__One">
-                <img class="footerFlexSection__Img" src="./img/zas.jpg" alt="" width="80" height="100">
-                <img class="footerFlexSection__Img" src="./img/zasluzM.jpg" alt="" width="80" height="100">
-                <img class="footerFlexSection__Img" src="./img/wieki4M.jpg" alt="" width="80" height="100">
+                <img class="footerFlexSection__Img" src="./img/Medale_Ed_biały tekst.png" alt="" width="250px">
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
@@ -116,7 +114,6 @@
             Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
-
     <!-- JS -->
     <script src="./js/script.js"></script>
 </body>
