--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="headerLarge">
+    <header class="headerLarge05">
         <nav class="nav">
             <a href="index.html"><img class="imglogo" src="./img/logo.jpg" alt=""></a>
             <div class="menuButton">
