--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header class="headerLarge">
+    <header class="headerLarge02">
         <nav class="nav">
             <a href="index.html"><img class="imglogo" src="./img/logo.jpg" alt=""></a>
             <div class="menuButton">
