update content, add more <p>

--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -93,10 +93,15 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy kompleksowe wsparcie realizacji procesów inwestycyjnych, reprezentowanie Inwestora w zakresie kompleksowego przygotowania i obsługi inwestycji, przeprowadzenie przetargów na wybranie najkorzystniejszych ofert, analizę i sprawdzenie dokumentacji
-            projektowej. Specjalizujemy się w tworzeniu opracowań nietypowych, innowacyjnych, w tym specjalistycznych ekspertyz, opinii technicznych, wytycznych projektowania, instrukcji obsługi systemów, dokumentacji techniczno-ruchowych i innych form
-            dokumentacji w branżach: sterowanie ruchem kolejowym, torowej, drogowej, konstrukcyjno-budowlanej, elektroenergetycznej, sanitarnej. Oferujemy prowadzenie nadzorów autorskich, wykonawstwo zastępcze, doradztwo w zakresie projektowania i wdrażania
-            nowoczesnych systemów dla kolei i metra. Przeprowadzamy testy i badania urządzeń i systemów sterowania ruchem kolejowym. Dysponujemy zapleczem badawczo-rozwojowym oraz stale współpracujemy z największymi jednostkami naukowymi i certyfikującymi
-            w obszarze systemów kolejowych i metra.
+            projektowej.
+        </p>
+        <p>
+            Specjalizujemy się w tworzeniu opracowań nietypowych, innowacyjnych, w tym specjalistycznych ekspertyz, opinii technicznych, wytycznych projektowania, instrukcji obsługi systemów, dokumentacji techniczno-ruchowych i innych form dokumentacji w branżach:
+            sterowanie ruchem kolejowym, torowej, drogowej, konstrukcyjno-budowlanej, elektroenergetycznej, sanitarnej.
+        </p>
+        <p>
+            Oferujemy prowadzenie nadzorów autorskich, wykonawstwo zastępcze, doradztwo w zakresie projektowania i wdrażania nowoczesnych systemów dla kolei i metra. Przeprowadzamy testy i badania urządzeń i systemów sterowania ruchem kolejowym. Dysponujemy zapleczem
+            badawczo-rozwojowym oraz stale współpracujemy z największymi jednostkami naukowymi i certyfikującymi w obszarze systemów kolejowych i metra.
         </p>
     </section>
 
