--- a/konstrukcje-budowlane-i-inzynierskie.html
+++ b/konstrukcje-budowlane-i-inzynierskie.html
@@ -93,8 +93,10 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących obiektów budowlanych o konstrukcji typowej (obiektu biurowe, mieszkalne, garaże) i nietypowej
-            (hale całopociągowe, zbiorniki). W naszej ofercie znajdują się projekty obiektów inżynierskich, w tym obiektów mostowych (mostów, wiaduktów) tuneli i kładek w różnych technologiach. Mamy doświadczenie w projektowaniu konstrukcji stalowych
-            i żelbetowych, monolitycznych i prefabrykowanych.
+            (hale całopociągowe, zbiorniki).
+        </p>
+        <p>
+            W naszej ofercie znajdują się projekty obiektów inżynierskich, w tym obiektów mostowych (mostów, wiaduktów) tuneli i kładek w różnych technologiach. Mamy doświadczenie w projektowaniu konstrukcji stalowych i żelbetowych, monolitycznych i prefabrykowanych.
         </p>
     </section>
 
