--- a/sieci-i-instalacje-elektroenergetyczne.html
+++ b/sieci-i-instalacje-elektroenergetyczne.html
@@ -93,9 +93,11 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących sieci i instalacji elektroenergetycznych i automatyki przemysłowej. W zakresie sieci i instalacji
-            elektroenergetycznych oferujemy projekty instalacji elektrycznych niskiego i średniego napięcia, w tym dystrybucji zasilania, oświetleniowych, zasilania bezprzerwowego w budynkach, na stacjach metra i kolejowych, w tunelach. W zakresie automatyki
-            przemysłowej specjalizujemy się w systemach zdalnego sterowania i integracji urządzeń technicznych (BMS ang. Building Management System). Projektujemy układy sterowania i zarządzenia procesami przemysłowymi oraz rozwiązania dedykowane dla
-            transportu miejskiego.
+            elektroenergetycznych oferujemy projekty instalacji elektrycznych niskiego i średniego napięcia, w tym dystrybucji zasilania, oświetleniowych, zasilania bezprzerwowego w budynkach, na stacjach metra i kolejowych, w tunelach.
+        </p>
+        <p>
+            W zakresie automatyki przemysłowej specjalizujemy się w systemach zdalnego sterowania i integracji urządzeń technicznych (BMS ang. Building Management System). Projektujemy układy sterowania i zarządzenia procesami przemysłowymi oraz rozwiązania dedykowane
+            dla transportu miejskiego.
         </p>
     </section>
 
