--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -92,8 +92,10 @@
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
         <p>
-            Oferujemy opracowanie projektów budowlanych, projektów wykonawczych i innych dokumentów dotyczących sieci i instalacji sanitarnych, w szczególności wodociągowych i kanalizacyjnych. W naszej ofercie znajdują się także układy odwodnienia terenów kolejowych,
-            systemy kanalizacji deszczowej, ściekowej i ogólnospławnej, zbiorniki retencyjne i bezodpływowe oraz przepompownie ścieków.
+            Oferujemy opracowanie projektów budowlanych, projektów wykonawczych i innych dokumentów dotyczących sieci i instalacji sanitarnych, w szczególności wodociągowych i kanalizacyjnych.
+        </p>
+        <p>
+            W naszej ofercie znajdują się także układy odwodnienia terenów kolejowych, systemy kanalizacji deszczowej, ściekowej i ogólnospławnej, zbiorniki retencyjne i bezodpływowe oraz przepompownie ścieków.
         </p>
     </section>
 
