--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -93,8 +93,11 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących systemów kierowania i sterowania ruchem pojazdów metra, szybkich kolei miejskich, szybkiego
-            tramwaju i rozwiązań niekonwencjonalnych w miejskim transporcie szynowym, w tym urządzeń zewnętrznych i wewnętrznych, stacjonarnych i pokładowych. W naszej ofercie znajdują się systemy liniowe i stacyjne sterowania ruchem pojazdów, systemy
-            detekcji obiektów w strefie zagrożenia oraz systemy informacji pasażerskiej. Naszą specjalnością są najnowocześniejsze systemy prowadzenia pojazdów ATC i ATO, w tym systemy klasy CBTC na poziomach automatyzacji GoA2 i GoA3.
+            tramwaju i rozwiązań niekonwencjonalnych w miejskim transporcie szynowym, w tym urządzeń zewnętrznych i wewnętrznych, stacjonarnych i pokładowych.
+        </p>
+        <p>
+            W naszej ofercie znajdują się systemy liniowe i stacyjne sterowania ruchem pojazdów, systemy detekcji obiektów w strefie zagrożenia oraz systemy informacji pasażerskiej. Naszą specjalnością są najnowocześniejsze systemy prowadzenia pojazdów ATC i ATO,
+            w tym systemy klasy CBTC na poziomach automatyzacji GoA2 i GoA3.
         </p>
     </section>
 
