--- a/systemy-sterowania-ruchem-kolejowym.html
+++ b/systemy-sterowania-ruchem-kolejowym.html
@@ -94,9 +94,12 @@
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących systemów kierowania i sterowania ruchem kolejowym, w tym urządzeń zewnętrznych i wewnętrznych,
             przekaźnikowych i komputerowych różnych typów. Specjalizujemy się w projektowaniu komputerowych systemów sterowania ruchem kolejowym stacyjnych zależnościowych i zdalnego sterowania (ILTOR-2, MOR-3, WT UZ), liniowych (blokady wbudowane, CBL2010),
-            przejazdowych oraz urządzeń ERTMS/ETCS L1 i L2. W naszej ofercie znajdują się także projekty systemów liczników osi, zasilania urządzeń srk, cyfrowej transmisji danych w systemach srk a także dokumentacje techniczno-ruchowe, wytyczne projektowania
-            i instrukcje obsługi systemów srk. Prowadzimy nadzory autorskie, przygotowujemy ekspertyzy, przeprowadzamy testy funkcjonalne urządzeń i systemów srk. Mamy unikalne doświadczenie we współpracy z różnymi zarządcami infrastruktury: PKP Polskie
-            Linie Kolejowe, PKP Szybka Kolej Miejska w Trójmieście, PKP Linia Hutnicza Szerokotorowa.
+            przejazdowych oraz urządzeń ERTMS/ETCS L1 i L2.
+        </p>
+        <p>
+            W naszej ofercie znajdują się także projekty systemów liczników osi, zasilania urządzeń srk, cyfrowej transmisji danych w systemach srk a także dokumentacje techniczno-ruchowe, wytyczne projektowania i instrukcje obsługi systemów srk. Prowadzimy nadzory
+            autorskie, przygotowujemy ekspertyzy, przeprowadzamy testy funkcjonalne urządzeń i systemów srk. Mamy unikalne doświadczenie we współpracy z różnymi zarządcami infrastruktury: PKP Polskie Linie Kolejowe, PKP Szybka Kolej Miejska w Trójmieście,
+            PKP Linia Hutnicza Szerokotorowa.
         </p>
     </section>
 
