--- a/uklady-komunikacyjne.html
+++ b/uklady-komunikacyjne.html
@@ -93,8 +93,11 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, analiz, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących planowania układów komunikacyjnych. Specjalizujemy się w opracowaniach studialnych i
-            planistycznych obejmujących linie i węzły kolejowe, układy transportowe, systemy miejskiego transportu zbiorowego, zintegrowane węzły intermodalne. W naszej ofercie znajdują się kompletne plany transportowe, strategie rozwoju transportu, analizy
-            oddziaływania inwestycji i powiązań międzygałęziowych środków transportu. Specjalizujemy się w opracowaniach dotyczących systemów miejskiego transportu szynowego, w tym metra oraz szybkiej kolei miejskiej i regionalnej.
+            planistycznych obejmujących linie i węzły kolejowe, układy transportowe, systemy miejskiego transportu zbiorowego, zintegrowane węzły intermodalne.
+        </p>
+        <p>
+            W naszej ofercie znajdują się kompletne plany transportowe, strategie rozwoju transportu, analizy oddziaływania inwestycji i powiązań międzygałęziowych środków transportu. Specjalizujemy się w opracowaniach dotyczących systemów miejskiego transportu szynowego,
+            w tym metra oraz szybkiej kolei miejskiej i regionalnej.
         </p>
     </section>
 
