--- a/infrastruktura-kolejowa-i-drogowa.html
+++ b/infrastruktura-kolejowa-i-drogowa.html
@@ -93,9 +93,13 @@
     <section class="whiteSection" id="firstId">
         <p>
             Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących infrastruktury torowej i drogowej. W zakresie branży torowej w naszej ofercie znajdują się obiekty
-            kolejowe i metra w zakresie trasowania linii w planie, kształtowanie niwelety, rozwiązywanie układów geometrycznych i funkcjonalnych stacji i szlaków, projektowanie nawierzchni kolejowej. W zakresie branży drogowej w naszej ofercie znajdują
-            się obiekty drogowe w zakresie trasowania przebiegu drogi, projektowanie węzłów drogowych, skrzyżowań, parkingów, zjazdów, przejazdów kolejowo-drogowych, przejść dla pieszych, zatok autobusowych. W naszej ofercie znajdują się również kompletne
-            rozwiązania dla węzłów przesiadkowych, ciągów pieszo-rowerowych oraz innych elementów infrastruktury drogowej.
+            kolejowe i metra w zakresie trasowania linii w planie, kształtowanie niwelety, rozwiązywanie układów geometrycznych i funkcjonalnych stacji i szlaków, projektowanie nawierzchni kolejowej.
+        </p>
+        <p>
+            W zakresie branży drogowej w naszej ofercie znajdują się obiekty drogowe w zakresie trasowania przebiegu drogi, projektowanie węzłów drogowych, skrzyżowań, parkingów, zjazdów, przejazdów kolejowo-drogowych, przejść dla pieszych, zatok autobusowych.
+        </p>
+        <p>
+            W naszej ofercie znajdują się również kompletne rozwiązania dla węzłów przesiadkowych, ciągów pieszo-rowerowych oraz innych elementów infrastruktury drogowej.
         </p>
     </section>
 
