--- a/index.html
+++ b/index.html
@@ -127,20 +127,68 @@
     <!-- Section 02 -->
     <section class="colorSection" id="co_nas_wyroznia">
         <h1 class="h1right">Co nas wyróżnia</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
-            autem. Similique illum at architecto nulla quaerat cumque velit temporibus fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere,
-            nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis
-            illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor. Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus
-            officia cumque quaerat in fugit minus eius. Error, accusantium ipsum aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus
-            facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia,
-            tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum autem. Similique illum at architecto nulla quaerat cumque velit temporibus
-            fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere, nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero
-            corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor.
-            Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus officia cumque quaerat in fugit minus eius. Error, accusantium ipsum
-            aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi
-            temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?
-        </p>
+        <div class="containerLabels">
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        Innowacyjność w projektowaniu nowoczesnych systemów sterowania ruchem
+                    </p>
+                </div>
+            </div>
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        Unikalne doświadczenie w projektowaniu infrastruktury metra
+                    </p>
+                </div>
+            </div>
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        Elastyczność w kształtowaniu oferty i współpracy z klientami
+                    </p>
+                </div>
+            </div>
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        Zapewnienie kompleksowej obsługi inwestycji (analizy, koncepcja, projekt, nadzór)
+                    </p>
+                </div>
+            </div>
+            <div class="citem">
+                <div class="containerLabels_Img">
+                    <img src="/icons/20210326_BPM-61.png" alt="" width="100px">
+                </div>
+                <div class="containerLabels_Text">
+                    <p>
+                        Bliska współpraca z jednostkami naukowo-badawczymi
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Section 03 -->
