add new history section

--- a/index.html
+++ b/index.html
@@ -194,20 +194,34 @@
     <!-- Section 03 -->
     <section class="whiteSection" id="historia_firmy">
         <h1 class="h1right">Historia firmy</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
-            autem. Similique illum at architecto nulla quaerat cumque velit temporibus fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere,
-            nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis
-            illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor. Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus
-            officia cumque quaerat in fugit minus eius. Error, accusantium ipsum aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus
-            facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia,
-            tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum autem. Similique illum at architecto nulla quaerat cumque velit temporibus
-            fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere, nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero
-            corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor.
-            Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus officia cumque quaerat in fugit minus eius. Error, accusantium ipsum
-            aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi
-            temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?
-        </p>
+        <div class="historySection">
+            <div class="historySection--col">
+                <p>
+                    Po zakończeniu II wojny światowej, zaraz po wyzwoleniu Warszawy rozpoczęła się odbudowa kompletnie zniszczonej stolicy. Powstałe w 1945 r. Biuro Odbudowy Stolicy opracowało wytyczne i program odbudowy i rozbudowy miasta. Już wówczas w ramach odbudowy
+                    i rozwoju systemu komunikacji publicznej przewidywano budowę metra w Warszawie.
+                </p>
+                <p>
+                    14 grudnia 1950 roku Uchwałą Rządu powołano do życia Biuro Projektów Metroprojekt. Wiązało się to z podjętą również w 1950 r. decyzją o budowie metra w Warszawie. Metroprojekt został powołany dla obsługi projektowej budowy metra w Warszawie. Od tego momentu
+                    liczy się historia Biura Projektów Metroprojekt.
+                </p>
+                <p>
+                    Początkowo biuro skupiło się na projektowaniu metra. Po trzech latach gdy budowa została przerwana przeorganizowaliśmy się do projektowania budownictwa komunalnego i specjalnego. Stąd w naszym dorobku jest zrealizowany projekt tunelu ciepłowniczego pod
+                    Wisłą, wiele kolektorów kanalizacyjnych, tras komunikacyjnych oraz Centrum Zdrowia Dziecka.
+                </p>
+            </div>
+            <div class="historySection--col">
+                <p>
+                    Kadrę dla projektowania metra udało się w Metroprojekcie utrzymać. I gdy w 1971 r. odżyła w Warszawie sprawa metra, byliśmy w stanie szybko opracować różne koncepcje przebiegu I linii metra, a następnie szczegółowe Założenia Techniczno-Ekonomiczne. Założenia
+                    Techniczno-Ekonomiczne były podstawą do podjęcia decyzji w 1982 r. o budowie I linii metra w Warszawie.
+                </p>
+                <p>
+                    Prawie cała I linia metra tzn. 16 z 21 stacji i 19 tuneli z 21 zrealizowana jest według projektów Biura Projektów Metroprojekt, a tylko 5 stacji i 2 tunele, wykonały inne zespoły projektowe.
+                </p>
+                <p>
+                    W dniu 01.07.1991 r. Metroprojekt - biuro państwowe przekształciło się w Biuro Projektów "Metroprojekt" Sp. z o.o., jako Spółka kontynuujemy działalność przedsiębiorstwa państwowego.
+                </p>
+            </div>
+        </div>
     </section>
 
     <!-- Section 04 -->
