add another section css and html "kadra"

--- a/index.html
+++ b/index.html
@@ -227,20 +227,96 @@
     <!-- Section 04 -->
     <section class="colorSection" id="kadra">
         <h1 class="h1left">Kadra</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia, tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum
-            autem. Similique illum at architecto nulla quaerat cumque velit temporibus fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere,
-            nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis
-            illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor. Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus
-            officia cumque quaerat in fugit minus eius. Error, accusantium ipsum aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus
-            facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus mollitia,
-            tenetur natus, exercitationem doloremque adipisci cumque rerum, suscipit quaerat labore laboriosam blanditiis! Vitae, maxime impedit sapiente accusamus molestiae dolorum autem. Similique illum at architecto nulla quaerat cumque velit temporibus
-            fugit sed, consectetur impedit error quasi non possimus tempora dolores vel odit suscipit ipsum recusandae expedita, eveniet, repellendus a facilis? Molestiae. Facere, nulla consectetur! Laboriosam, aliquid eos? Eaque laborum voluptas libero
-            corporis, quo dolores magnam possimus nesciunt porro beatae eos molestiae earum aliquid. Praesentium fugit vel fugiat amet quasi, dolor vero. Voluptas nemo ex officiis illum ipsa, magni molestiae non, incidunt dicta expedita repellat dolor.
-            Reprehenderit, porro sit magnam reiciendis est culpa explicabo, eos alias et libero debitis officiis assumenda voluptates? Libero, quam nulla. Suscipit sapiente doloribus officia cumque quaerat in fugit minus eius. Error, accusantium ipsum
-            aperiam distinctio non minima ratione, fugit quaerat facere maxime molestiae ex laborum, laboriosam sit. Corporis cum alias, odit neque architecto veniam. Ullam, doloribus facilis! Inventore dolores ea dolore? Sapiente reprehenderit sequi
-            temporibus qui perspiciatis! Magnam est harum atque quis dicta officia consequuntur delectus quos?
-        </p>
+        <div class="rightsmallpdiv">
+            <p>
+                Nasze rozwiązania opierają się na interdyscyplinarnym podejściu do projektów oraz na zespole, który tworzą specjaliści z wieloletnim doświadczeniem.
+            </p>
+            <p>
+                Ze względu na główne obszary działalności firmy nasz zespół dzieli się na podzespoły projektowe wg. branż:
+            </p>
+        </div>
+        <div class="peopleLabels">
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-62.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-63.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-64.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-65.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-66.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-67.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-68.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+            <div class="peopleitem">
+                <div class="peoplecontainerLabels_Img">
+                    <img src="/icons/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="peopleLabels_Text">
+                    <p>
+                        70 lat tradycji w projektowaniu
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Section 05 -->
